--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "realtime-weather-app",
-  "homepage": "https://mollylin.github.io/realtime-weather-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "pnpm run build && gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
