--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Use secret
+        uses: echo "The secret is ${{ secrets.VITE_AUTHORIZATION_KEY }}"
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
