--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+VITE_AUTHORIZATION_KEY=CWA-DF043EF7-EC39-4060-A4E8-BC7F2DEAD336
 VITE_LOCATION_NAME=新北市
 VITE_CURRENT_WEATHER=O-A0001-001
 VITE_WEATHER_FORECAST=F-C0032-001
